More Contrast Issues Fixed. Current Max. Temp Notification Set. Work Done

--- a/scoots/styles/base.css
+++ b/scoots/styles/base.css
@@ -56,6 +56,28 @@ h3 {
   border-bottom: 5px solid var(--text);
 }
 
+.weather-notice {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-around;
+  position: absolute;
+  background-color: var(--text);  
+  color: var(--white);
+  font-size: 12px;
+  top: 0;
+}
+
+.weather-notice span {
+  cursor: pointer;
+  padding: 10px;
+}
+
+.weather-notice .close-btn {
+  font-size: 12px;
+  border: 1px solid #ccc;
+}
+
 header {
   display: flex;
   justify-content: space-between;
@@ -105,8 +127,7 @@ nav a {
 .menu a {
   display: block;
   padding: 0.75rem;
-  text-decoration: none;
-  color: var(--white);
+  text-decoration: none;  
   font-weight: 700;
 }
 
